# sem_moe

./: .gitignore  CLAUDE.md  artifacts.py  dataset_utils.py  eval_dp.py  eval_tp.py  export_custom_prompts.py  main.py  profile_artifacts.py  profile_collect.py  profile_online_dp.py  profile_schedule.py  profile_stats.py  progress_utils.py  pyproject.toml  schedule.py
tests/: test_profile_online_dp.py  test_profile_pipeline.py  test_profile_schedule.py  test_sem_moe_tp.py
tools/: compare_sem_moe_outputs.py  comparison_utils.py  export_custom_prompts.py  moe_comm_sweep.py  run_tp_verification.sh  sweep_backends.py  verify_tp_correctness.py
