[project]
name = "semantic-parallelism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0.0",
    "numpy>=2.0.0",
    "torch==2.10.0",
    "pytest>=9.0.2",
    "vllm",
    "tqdm>=4.67.3",
    "tblib>=3.2.2",
    "flashinfer-python>=0.6.4",
]

[tool.uv.sources]
vllm = { path = "../vllm", editable = true }
